[package]
name = "chaos_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
num-complex = "0.4.3"
nalgebra = "0.32.3"
rand = "0.8.5"
clap = { version = "4.0", features = ["derive"] }
colored = "1.6.1"
anyhow = "1.0"
indicatif = "0.17.6"
log = "0.4.19"
env_logger = "0.10.0"